<resources>
    <string name="app_name">MyTenant</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Tenant</string>
    <string name="second_fragment_label">Tenant Registration</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tenant_payment">Payment</string>
    <string name="water_power_bill"><![CDATA[Water & Power bill :]]></string>
    <string name="water_power_paid"><![CDATA[Water & Power paid :]]></string>
    <string name="water_power_bill_amount"><![CDATA[Water & Power paid amount]]></string>

    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Rent List</string>
    <string name="title_notifications">Power List</string>
    <string name="month">Month :</string>
    <string name="rent_amount">Rent amount :</string>
    <string name="paid_amount">Paid amount    \u20B9   = </string>
    <string name="due_amount">Due amount    \u20B9   = </string>
    <string name="save">Save</string>
    <string name="month_year"><![CDATA[Month&Year]]>     :  </string>
    <string name="bill_amount">Bill amount      \u20B9   = </string>
</resources>