<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
         <variable
             name="viewModel"
             type="com.tenant.mytenant.viewModel.PowerWaterViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".UserPaymentFragment"
        android:padding="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="60dp">

        <!-- TODO: Update blank fragment layout -->


        <LinearLayout
            android:padding="2dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="0dp"
                 android:hint="Month"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
               <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adapter="@{viewModel.getadapter()}"
                    android:inputType="none"
                    app:addTextChangedListener="@{viewModel.monthNameTextWatcher}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--<TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Month : "
                android:textStyle="bold"
                android:textSize="16sp"/>

            <Spinner
                android:id="@+id/spinnerMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/month"
                android:spinnerMode="dropdown"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                tools:ignore="MissingConstraints"
                android:drawSelectorOnTop="false"
                android:dropDownVerticalOffset="60dp"
                android:gravity="center"
                android:overlapAnchor="false"
                android:onItemSelected="@{viewModel.spinnerMonth}"
                android:selection="@{viewModel.setIndex()}"/>-->
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/water_power_bill"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/powerWaterPaymentAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Water bill amount"
                android:inputType="number"
                tools:ignore="MissingConstraints"
                app:addTextChangedListener="@{viewModel.totalAmountTextWatcher}"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/water_power_paid"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/paidAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/water_power_bill_amount"
                android:inputType="number"
                tools:ignore="MissingConstraints"
                app:addTextChangedListener="@{viewModel.paidTextWatcher}"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Due amount :"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dueAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="due amount"
                android:inputType="none"

                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <Button
            android:id="@+id/save_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="Save"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/dueAmount"
            app:layout_constraintVertical_bias="0.2"
            android:onClick="@{viewModel::saveOnclick}"/>



    </LinearLayout>
</layout>